# pythonism

./: decor.py  pyproject.toml  pythonism.py
test/: test_pythonism.py
